--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-appsync": "^1.71.0",
+    "@aws-cdk/aws-athena": "^1.71.0",
+    "@aws-cdk/aws-kinesis": "^1.69.0",
+    "@aws-cdk/aws-s3": "^1.69.0",
     "@aws-cdk/core": "1.69.0",
     "source-map-support": "^0.5.16"
   }
